--- a/package.json
+++ b/package.json
@@ -1,62 +1,77 @@
 {
-  "name": "erc721-users-contracts",
-  "description": "Smart contract Registry for ERC721 Users",
-  "private": true,
+  "name": "template-ethereum-contracts",
+  "version": "0.1.0",
+  "description": "Template to develop ethereum smart contracts",
+  "repository": "github:wighawag/template-ethereum-contracts",
+  "author": "wighawag",
+  "license": "MIT",
+  "keywords": [
+    "ethereum",
+    "smart-contracts",
+    "template",
+    "boilerplate",
+    "hardhat",
+    "solidity"
+  ],
+  "resolutions": {
+    "websocket": "1.0.32"
+  },
   "devDependencies": {
     "@ethereum-waffle/chai": "^3.0.2",
-    "@ethersproject/bignumber": "^5.0.5",
-    "@ethersproject/bytes": "^5.0.3",
-    "@ethersproject/solidity": "^5.0.2",
-    "@ethersproject/wallet": "^5.0.2",
-    "@nomiclabs/buidler": "^1.4.6",
+    "@ethersproject/wallet": "^5.0.5",
+    "@openzeppelin/contracts": "^3.2.1-solc-0.7",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^8.0.2",
     "@types/node": "^14.10.2",
-    "buidler-deploy": "^0.6.0-beta.26",
-    "buidler-ethers-v5": "^0.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
-    "ethers": "^5.0.8",
-    "mocha": "^8.1.1",
-    "solidity-coverage": "^0.7.10",
-    "ts-node": "^9.0.0",
-    "typescript": "^3.9.7",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "ethers": "^5.0.17",
+    "fs-extra": "^9.0.1",
+    "hardhat": "^2.0.0",
+    "hardhat-deploy": "^0.7.0-beta.25",
+    "hardhat-deploy-ethers": "^0.3.0-beta.6",
+    "mocha": "^8.1.1",
     "prettier": "^2.0.5",
-    "prettier-plugin-solidity": "^1.0.0-alpha.57"
+    "prettier-plugin-solidity": "^1.0.0-alpha.57",
+    "solhint": "^3.3.1",
+    "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.7.10",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   },
   "scripts": {
-    "lint": "eslint \"**/*.{js,ts}\"",
-    "lint:fix": "eslint --fix \"**/*.{js,ts}\"",
+    "postinstall": "node ./.setup.js",
+    "lint": "eslint \"**/*.{js,ts}\" && solhint src/**/*.sol",
+    "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix src/**/*.sol",
     "format": "prettier --write \"**/*.{ts,js,sol}\"",
-    "test": "buidler compile && mocha --recursive test",
-    "coverage": "buidler --network coverage coverage",
-    "dev": "buidler node --reset --watch --export contractsInfo.json",
-    "compile": "buidler compile",
-    "local:dev": "buidler --network localhost deploy --watch",
-    "local:deploy": "buidler --network localhost deploy",
-    "local:run": "cross-env BUIDLER_NETWORK=localhost ts-node --files",
-    "local:seed": "cross-env BUIDLER_NETWORK=localhost ts-node --files scripts/seed.ts",
-    "local:export": "buidler --network localhost export",
-    "void:deploy": "buidler deploy",
-    "staging:deploy": "buidler --network staging deploy",
-    "staging:export": "buidler --network staging export",
-    "staging:seed": "cross-env BUIDLER_NETWORK=staging ts-node --files scripts/seed.ts",
-    "rinkeby:deploy": "buidler --network rinkeby deploy",
-    "rinkeby:export": "buidler --network rinkeby export",
-    "rinkeby:seed": "cross-env BUIDLER_NETWORK=rinkeby ts-node --files scripts/seed.ts",
-    "kovan:deploy": "buidler --network kovan deploy",
-    "kovan:export": "buidler --network kovan export",
-    "goerli:deploy": "buidler --network goerli deploy",
-    "goerli:export": "buidler --network goerli export",
-    "mainnet:deploy": "buidler --network mainnet deploy",
-    "mainnet:export": "buidler --network mainnet export",
-    "rinkeby:run": "cross-env BUIDLER_NETWORK=rinkeby ts-node --files",
-    "buidler": "buidler"
+    "test": "cross-env HARDHAT_DEPLOY_FIXTURE=true HARDHAT_COMPILE=true mocha --bail --recursive test",
+    "coverage": "cross-env HARDHAT_DEPLOY_FIXTURE=true hardhat --network coverage coverage",
+    "dev": "hardhat node --reset --watch --export contractsInfo.json",
+    "compile": "hardhat compile",
+    "local:dev": "hardhat --network localhost deploy --watch",
+    "local:deploy": "hardhat --network localhost deploy",
+    "local:run": "cross-env HARDHAT_NETWORK=localhost ts-node --files",
+    "local:seed": "cross-env HARDHAT_NETWORK=localhost ts-node --files scripts/seed.ts",
+    "local:export": "hardhat --network localhost export",
+    "void:deploy": "hardhat deploy",
+    "staging:deploy": "hardhat --network staging deploy",
+    "staging:export": "hardhat --network staging export",
+    "staging:seed": "cross-env HARDHAT_NETWORK=staging ts-node --files scripts/seed.ts",
+    "rinkeby:deploy": "hardhat --network rinkeby deploy",
+    "rinkeby:export": "hardhat --network rinkeby export",
+    "rinkeby:seed": "cross-env HARDHAT_NETWORK=rinkeby ts-node --files scripts/seed.ts",
+    "kovan:deploy": "hardhat --network kovan deploy",
+    "kovan:export": "hardhat --network kovan export",
+    "goerli:deploy": "hardhat --network goerli deploy",
+    "goerli:export": "hardhat --network goerli export",
+    "mainnet:deploy": "hardhat --network mainnet deploy",
+    "mainnet:export": "hardhat --network mainnet export",
+    "rinkeby:run": "cross-env HARDHAT_NETWORK=rinkeby ts-node --files",
+    "hardhat": "hardhat"
   }
 }
