--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "template-ethereum-contracts",
+  "name": "erc721-renting",
   "version": "0.1.0",
-  "description": "Template to develop ethereum smart contracts",
-  "repository": "github:wighawag/template-ethereum-contracts",
+  "description": "Contracts to allow renting of ERC721 for use",
+  "repository": "github:wighawag/erc721-users",
   "author": "wighawag",
   "license": "MIT",
   "keywords": [
     "ethereum",
     "smart-contracts",
-    "template",
-    "boilerplate",
-    "hardhat",
-    "solidity"
+    "erc721",
+    "renting"
   ],
   "resolutions": {
     "websocket": "1.0.32"
   },
   "devDependencies": {
+    "@codechecks/client": "^0.1.10",
     "@ethereum-waffle/chai": "^3.0.2",
     "@ethersproject/wallet": "^5.0.5",
     "@openzeppelin/contracts": "^3.2.1-solc-0.7",
@@ -35,6 +34,7 @@
     "hardhat": "^2.0.0",
     "hardhat-deploy": "^0.7.0-beta.25",
     "hardhat-deploy-ethers": "^0.3.0-beta.6",
+    "hardhat-gas-reporter": "^1.0.1",
     "mocha": "^8.1.1",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.57",
@@ -48,8 +48,10 @@
     "postinstall": "node ./.setup.js",
     "lint": "eslint \"**/*.{js,ts}\" && solhint src/**/*.sol",
     "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix src/**/*.sol",
-    "format": "prettier --write \"**/*.{ts,js,sol}\"",
+    "format": "prettier --check \"**/*.{ts,js,sol}\"",
+    "format:fix": "prettier --write \"**/*.{ts,js,sol}\"",
     "test": "cross-env HARDHAT_DEPLOY_FIXTURE=true HARDHAT_COMPILE=true mocha --bail --recursive test",
+    "gas": "cross-env REPORT_GAS=true hardhat test",
     "coverage": "cross-env HARDHAT_DEPLOY_FIXTURE=true hardhat --network coverage coverage",
     "dev": "hardhat node --reset --watch --export contractsInfo.json",
     "compile": "hardhat compile",
